2005-01-14  Jorn Baayen  <jbaayen@gnome.org>

	* src/Album.cs:
	* src/Database.cs:
	* src/Metadata.cs:
	* src/Song.cs:

	Remove pointless CleanStringArray on loading from db. Clean
	the arrays in Metadata itself instead.

	Various other small cleanups and fixes.

2005-01-14  Tamara Roberson  <foxxygirltamara@gmail.com>

	* src/Metadata.cs:
	
	Making Metadata inherit from GLib.Object was a bad idea.
	Now we just use a private IntPtr for the raw data.	

2005-01-14  Tamara Roberson  <foxxygirltamara@gmail.com>

	* src/PlaylistWindow.cs:
	
	Fix a recently added bug that broke the save-playlist-on-exit feature.

2005-01-14  Tamara Roberson  <foxxygirltamara@gmail.com>

	* src/Metadata.cs:
	
	Code cleanup. Split up the constructor.

2005-01-13  Tamara Roberson  <foxxygirltamara@gmail.com>

	* src/AddAlbumWindow.cs:
	* src/AddSongWindow.cs:
	* src/AddWindow.cs:
	
	Moved OnAdded, OnChanged, and OnRemoved from AddWindow into 
	AddAlbumWindow and AddSongWindow to please Mono 1.0.

2005-01-11  Jorn Baayen  <jbaayen@gnome.org>

	* libmuine/player-xine.c: (signal_idle), (player_construct),
	(player_open), (player_pause), (player_seek):

	Cleanup GTimer code.
	
	* src/SkipToWindow.cs:

	Set slider value after setting the range.

2005-01-11  Jorn Baayen  <jbaayen@gnome.org>

	* src/PlaylistWindow.cs:

	Minor cleanup.

2005-01-11  Jorn Baayen  <jbaayen@gnome.org>

	* src/Album.cs:
	* src/NotificationAreaIcon.cs:

	Keep comments to translators on the line above the call to GetString,
	this is to make sure they appear in the .po files.

2005-01-10  Tamara Roberson  <foxxygirltamara@gmail.com>

	* src/Song.cs:
	* src/StringUtils.cs:

	Remove empty artist and performer listings which can sometimes occur
	in metadata. This turns " and foo" into "foo".

2005-01-10  Tamara Roberson  <foxxygirltamara@gmail.com>
	
	* data/glade/PlaylistWindow.glade:
	* data/ui/NotificationAreaIcon.xml:
	* data/ui/PlaylistWindow.xml:
	* src/About.cs:
	* src/Actions.cs:
	* src/AddAlbumWindow.cs: